JAVA-38226: Changes made for handle default build WARNING(has been deprecated and marked for removal) (#17804)