@@ -11,16 +11,16 @@ public class FirstClassFunctionsUnitTest {
     @Test
     public void testSortingWithoutLambda() {
 
-        assertEquals(new Integer(8), FirstClassFunctions.sortWithoutLambda(Arrays.asList(new Integer(10), new Integer(8)))
-            .get(0));
+        assertEquals(Integer.valueOf(8),
+            FirstClassFunctions.sortWithoutLambda(Arrays.asList(10, 8)).get(0));
 
     }
 
     @Test
     public void testSortingWithLambda() {
 
-        assertEquals(new Integer(8), FirstClassFunctions.sortWithLambda(Arrays.asList(new Integer(10), new Integer(8)))
-            .get(0));
+        assertEquals(Integer.valueOf(8),
+            FirstClassFunctions.sortWithLambda(Arrays.asList(10, 8)).get(0));
 
     }
 
